--- a/index.html
+++ b/index.html
@@ -3,164 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BookNest - Your Online Bookstore</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <title>BookNest</title>
+    <link rel="icon" href="images/logo.jpg" type="image/jpeg">
+    <script>
+        window.location.href = 'pages/login.html';
+    </script>
 </head>
 <body>
-    <!-- Navigation -->
-    <nav class="navbar">
-        <div class="nav-container">
-            <div class="nav-logo" id="secretAdminLogo" style="cursor:pointer;">
-                <i class="fas fa-book-open"></i>
-                <span>BookNest</span>
-            </div>
-            <div class="nav-links">
-                <a href="index.html" class="nav-link active">
-                    <i class="fas fa-store"></i> SHOP
-                </a>
-                <a href="#" class="nav-link" id="cartLink">
-                    <i class="fas fa-shopping-cart"></i> CART
-                    <span class="cart-badge" id="cartBadge">0</span>
-                </a>
-                <a href="pages/pile.html" class="nav-link">
-                    <i class="fas fa-layer-group"></i> PILE
-                </a>
-                <a href="pages/orders.html" class="nav-link">
-                    <i class="fas fa-receipt"></i> ORDERS
-                </a>
-            </div>
-            <div class="nav-actions">
-                <div class="search-box">
-                    <input type="text" id="searchInput" placeholder="Search books...">
-                    <button class="filter-btn" id="filterBtn">
-                        <i class="fas fa-filter"></i> Filter
-                    </button>
-                </div>
-                <button class="user-btn" id="userBtn">
-                    <i class="fas fa-user"></i>
-                </button>
-            </div>
-        </div>
-    </nav>
-
-    <!-- Sidebar -->
-    <div class="sidebar">
-        <div class="sidebar-header">
-            <div class="sidebar-logo">
-                <i class="fas fa-book-open"></i>
-                <span>BookNest</span>
-            </div>
-        </div>
-        <nav class="sidebar-nav">
-            <a href="index.html" class="sidebar-link active">
-                <i class="fas fa-store"></i> ON HAND STORE
-            </a>
-            <a href="pile.html" class="sidebar-link">
-                <i class="fas fa-layer-group"></i> PILE
-            </a>
-            <a href="pages/orders.html" class="sidebar-link">
-                <i class="fas fa-receipt"></i> ORDERS AND INVOICES
-            </a>
-            <a href="pages/login.html" class="sidebar-link" id="authLink">
-                <i class="fas fa-sign-in-alt"></i> Login / Sign Up
-            </a>
-        </nav>
-        <div class="sidebar-footer">
-            <div class="user-info" id="sidebarUser" style="display: none;">
-                <i class="fas fa-user-circle"></i>
-                <span id="userName">Guest</span>
-            </div>
-        </div>
-    </div>
-
-    <!-- Main Content -->
-    <main class="main-content">
-        <div class="content-header">
-            <div class="header-tabs">
-                <button class="tab-btn active">SHOP</button>
-            </div>
-            <div class="header-actions">
-                <div class="search-bar">
-                    <i class="fas fa-search"></i>
-                    <input type="text" placeholder="Search" id="mainSearch">
-                </div>
-                <button class="filter-toggle" id="filterToggle">
-                    <i class="fas fa-filter"></i> Filter
-                    <i class="fas fa-chevron-down"></i>
-                </button>
-            </div>
-        </div>
-
-        <!-- Books Grid -->
-        <div class="books-grid" id="booksGrid">
-            <!-- Books will be loaded here by JavaScript -->
-        </div>
-    </main>
-
-    <!-- Cart Modal -->
-    <div class="modal" id="cartModal">
-        <div class="modal-content cart-modal">
-            <div class="modal-header">
-                <h2><i class="fas fa-shopping-cart"></i> Your Cart</h2>
-                <button class="close-btn" id="closeCart">&times;</button>
-            </div>
-            <div class="modal-body" id="cartItems">
-                <!-- Cart items will be loaded here -->
-            </div>
-            <div class="modal-footer">
-                <div class="cart-total">
-                    <span>Total:</span>
-                    <span class="total-price" id="totalPrice">PHP 0.00</span>
-                </div>
-                <button class="btn-primary" id="checkoutBtn">Proceed to Checkout</button>
-            </div>
-        </div>
-    </div>
-
-    <!-- User Menu Modal -->
-    <div class="modal" id="userModal">
-        <div class="modal-content user-modal">
-            <div class="modal-header">
-                <h2><i class="fas fa-user"></i> Account</h2>
-                <button class="close-btn" id="closeUser">&times;</button>
-            </div>
-            <div class="modal-body">
-                <div id="userMenuContent">
-                    <!-- Content will be loaded by JavaScript -->
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <script src="js/books-data.js"></script>
-    <script src="js/auth.js"></script>
-    <script src="js/cart.js"></script>
-    <script src="js/main.js"></script>
-    <script>
-    // Block access if not logged in/confirmed
-    document.addEventListener('DOMContentLoaded', function() {
-        if (!window.auth || !auth.isLoggedIn()) {
-            window.location.href = 'pages/login.html';
-            return;
-        }
-        const user = auth.getCurrentUser();
-        if (user && user.role !== 'admin' && !user.confirmed) {
-            alert('Please verify your email before accessing the shop.');
-            window.location.href = 'pages/login.html';
-        }
-    });
-    // Secret admin access: click logo 5 times
-    let adminClickCount = 0;
-    document.getElementById('secretAdminLogo').addEventListener('click', function() {
-        adminClickCount++;
-        if (adminClickCount >= 5) {
-            adminClickCount = 0;
-            window.location.href = 'pages/admin-login.html';
-        }
-        setTimeout(() => { adminClickCount = 0; }, 2000);
-    });
-    </script>
+    <p>Redirecting to login...</p>
 </body>
 </html>
