Enable Firestore sync for Admin and Login pages

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -524,6 +524,14 @@
         </div>
     </div>
 
+    <!-- Firebase SDKs -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+    <!-- Firebase Config & Backend -->
+    <script src="../js/firebase-config.js"></script>
+    <script src="../js/firestore-backend.js"></script>
+    
     <script src="../js/books-data.js"></script>
     <script src="../js/auth-simple.js"></script>
     <script src="../js/admin.js?v=7"></script>
