--- a/BOOKNEST-ACUTAL-SITE/pages/admin.html
+++ b/BOOKNEST-ACUTAL-SITE/pages/admin.html
@@ -524,9 +524,14 @@
         </div>
     </div>
 
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+    <script src="../js/firebase-config.js"></script>
+    <script src="../js/firestore-backend.js"></script>
     <script src="../js/books-data.js"></script>
     <script src="../js/auth-simple.js"></script>
-    <script src="../js/admin.js?v=7"></script>
+    <script src="../js/admin.js?v=8"></script>
     <script src="../js/admin-notifications.js"></script>
     <script src="../js/storage-manager.js"></script>
     <div class="sidebar-overlay" onclick="toggleMobileSidebar()"></div>
