--- a/BOOKNEST-ACUTAL-SITE/pages/login.html
+++ b/BOOKNEST-ACUTAL-SITE/pages/login.html
@@ -281,6 +281,11 @@
         </div>
     </div>
     
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+    <script src="../js/firebase-config.js"></script>
+    <script src="../js/firestore-backend.js"></script>
     <script src="../js/auth-simple.js"></script>
     <script src="../js/login-simple.js"></script>
 </body>
