--- a/BOOKNEST-ACUTAL-SITE/pages/cart.html
+++ b/BOOKNEST-ACUTAL-SITE/pages/cart.html
@@ -414,6 +414,14 @@
                         <button class="btn-checkout" onclick="window.location.href='../home.html'">
                             <i class="fas fa-store"></i> Browse Books
                         </button>
+                        <div style="margin-top: 2rem; padding-top: 1rem; border-top: 1px dashed #e2e8f0; font-size: 0.8rem; color: #94a3b8;">
+                            <p>Troubleshooting:</p>
+                            <p>Items in memory: ${cartManager.getItemCount()}</p>
+                            <p>User ID: ${auth.getCurrentUser() ? auth.getCurrentUser().id : 'Guest'}</p>
+                            <button onclick="cartManager.clearCart(); location.reload();" style="margin-top: 0.5rem; padding: 0.25rem 0.5rem; background: #ef4444; color: white; border: none; border-radius: 4px; cursor: pointer;">
+                                Force Clear Cart
+                            </button>
+                        </div>
                     </div>
                 `;
                 return;
