Fix: Add massive red Force Reset button to empty cart state

--- a/BOOKNEST-ACUTAL-SITE/pages/cart.html
+++ b/BOOKNEST-ACUTAL-SITE/pages/cart.html
@@ -364,7 +364,7 @@
     <script src="../js/books-data.js"></script>
     <script src="../js/auth-simple.js"></script>
     <script src="../js/ticket-notifications.js"></script>
-    <script src="../js/cart.js?v=13"></script>
+    <script src="../js/cart.js?v=14"></script>
     <script src="../js/main.js"></script>
     <script>
         // EMERGENCY AUTO-FIX SCRIPT
@@ -482,12 +482,11 @@
                         <button class="btn-checkout" onclick="window.location.href='../home.html'">
                             <i class="fas fa-store"></i> Browse Books
                         </button>
-                        <div style="margin-top: 2rem; padding-top: 1rem; border-top: 1px dashed #e2e8f0; font-size: 0.8rem; color: #94a3b8;">
-                            <p>Troubleshooting:</p>
-                            <p>Items in memory: ${cartManager.getItemCount()}</p>
-                            <p>User ID: ${auth.getCurrentUser() ? auth.getCurrentUser().id : 'Guest'}</p>
-                            <button onclick="cartManager.clearCart(); location.reload();" style="margin-top: 0.5rem; padding: 0.25rem 0.5rem; background: #ef4444; color: white; border: none; border-radius: 4px; cursor: pointer;">
-                                Force Clear Cart
+                        <div style="margin-top: 2rem; padding: 1rem; background: #fee2e2; border-radius: 8px; border: 1px solid #ef4444;">
+                            <p style="color: #b91c1c; font-weight: bold; margin-bottom: 0.5rem;">Having trouble?</p>
+                            <p style="color: #b91c1c; font-size: 0.9rem; margin-bottom: 1rem;">If your cart badge shows items but this page is empty, click below:</p>
+                            <button onclick="forceResetCart()" style="width: 100%; padding: 0.75rem; background: #ef4444; color: white; border: none; border-radius: 6px; font-weight: bold; cursor: pointer;">
+                                <i class="fas fa-trash-alt"></i> FORCE RESET CART
                             </button>
                         </div>
                     </div>
