Fix: Add auto-sync to main site and version label to admin

--- a/BOOKNEST-ACUTAL-SITE/pages/admin.html
+++ b/BOOKNEST-ACUTAL-SITE/pages/admin.html
@@ -96,7 +96,7 @@
         <!-- Overview Section -->
         <section id="overview-section" class="dashboard-section active">
             <div class="section-header">
-                <h1><i class="fas fa-chart-line"></i> Dashboard Overview</h1>
+                <h1><i class="fas fa-chart-line"></i> Dashboard Overview <span style="font-size: 0.8rem; background: #eab308; color: black; padding: 2px 6px; border-radius: 4px;">v16</span></h1>
                 <button onclick="loadOverview()" style="padding: 0.5rem 1rem; background: #2F5D62; color: white; border: none; border-radius: 6px; cursor: pointer; font-weight: 600; transition: all 0.2s;" onmouseover="this.style.background='#1F3D40'" onmouseout="this.style.background='#2F5D62'">
                     <i class="fas fa-sync-alt"></i> Refresh
                 </button>
