Fix: Aggressive cart sanitization and robust user auto-sync (v17)

--- a/BOOKNEST-ACUTAL-SITE/pages/cart.html
+++ b/BOOKNEST-ACUTAL-SITE/pages/cart.html
@@ -364,8 +364,8 @@
     <script src="../js/books-data.js"></script>
     <script src="../js/auth-simple.js"></script>
     <script src="../js/ticket-notifications.js"></script>
-    <script src="../js/cart.js?v=14"></script>
-    <script src="../js/main.js"></script>
+    <script src="../js/cart.js?v=17"></script>
+    <script src="../js/main.js?v=17"></script>
     <script>
         // EMERGENCY AUTO-FIX SCRIPT
         // This script detects if the badge shows items but the cart is empty, and forces a reset
