--- a/BOOKNEST-ACUTAL-SITE/pages/profile.html
+++ b/BOOKNEST-ACUTAL-SITE/pages/profile.html
@@ -447,8 +447,8 @@
     <script src="../js/auth-simple.js"></script>
     <script src="../js/user-notifications.js"></script>
     <script src="../js/ticket-notifications.js"></script>
-    <script src="../js/cart.js?v=9"></script>
-    <script src="../js/main.js"></script>
+    <script src="../js/cart.js?v=17"></script>
+    <script src="../js/main.js?v=17"></script>
     <script>
         let currentUser = null;
 
