Fix: Restore manual sync button as 'Repair Sync' for stuck legacy accounts

--- a/BOOKNEST-ACUTAL-SITE/pages/profile.html
+++ b/BOOKNEST-ACUTAL-SITE/pages/profile.html
@@ -395,6 +395,9 @@
                         <button class="btn btn-primary" onclick="switchToEditMode()">
                             <i class="fas fa-edit"></i> Edit Profile
                         </button>
+                        <button class="btn" onclick="forceSyncProfile()" style="background: #f59e0b; color: white; border: none; font-size: 0.9rem;" title="Use this if your account is not showing on other devices">
+                            <i class="fas fa-sync"></i> Repair Sync
+                        </button>
                     </div>
                 </div>
             </div>
